# MiniGit

./: README.md  pyproject.toml
minigit/: cli.py
