[project]
name = "MiniGit"
version = "0.1.0"
description = "Minimal Git plumbing clone"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[project.scripts]
minigit = "minigit.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
